# fdaPDE-core

fdaPDE/finite_elements/basis/: lagrangian_basis.h
fdaPDE/geometry/: interval.h  simplex.h  triangulation.h  utils.h  voronoi.h
fdaPDE/linear_algebra/: binary_matrix.h  fspai.h  lumping.h  smw.h
fdaPDE/splines/: spline_assembler.h
fdaPDE/splines/basis/: spline_basis.h
fdaPDE/utils/: symbols.h
fdaPDE/utils/data_structures/: block_frame.h
test/: CMakeLists.txt  main.cpp
test/src/: fspai_test.cpp
